# YourSound

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt  YourSoundBinaryPlayer.cmake
core/include/YourSound/: BinPlayerInterface.hpp  BinPlayerRegistry.hpp  BinPlayerSTD.hpp  Config.hpp  CoreExportImport.hpp  Player.hpp  Rack.hpp  Serialisation.hpp  Version.hpp
core/include/YourSound/IntegratedPlayers/: BasicOSCPlayer.hpp  ModLFO.hpp
core/include/YourSound/ResourceTypes/: BinaryResource.hpp  SampleResource.hpp
core/include/YourSound/UI/: Colours.hpp  Fonts.hpp  Icons.hpp
core/lib/: CMakeLists.txt
core/src/: BinPlayerInterface.cpp  CMakeLists.txt  Config.cpp  Player.cpp  Rack.cpp  Resource.cpp
core/src/IntegratedPlayers/: BasicOSCPlayer.cpp  ModLFO.cpp
core/src/ResourceTypes/: BinaryResource.cpp  SampleResource.cpp
core/src/engines/script/: LuaIntegration.cpp
factory/: yoursound.toml
factory/binary/: CMakeLists.txt
factory/binary/include/: BinPlayerHexwave.hpp  BinPlayerSF2.hpp  BinPlayerSampler.hpp  Utils.hpp  stb_hexwave.h
factory/binary/src/: BinPlayer.cpp  BinPlayerHexwave.cpp  BinPlayerSF2.cpp  BinPlayerSampler.cpp
factory/modern/: yoursound.toml
factory/release/: yoursound.json
factory/release/Synth/Basic OSC/: Basic Noise.yspp  Basic Sawtooth.yspp  Basic Sine.yspp  Basic Square.yspp  Basic Triangle.yspp
factory/release/Synth/Basic OSC/Morphing/: Shape Squad.yspp
factory/release/Synth/Hexwave/: Basic Sawtooth.yspp  Basic Square.yspp  Basic Triangle.yspp  Bright Lead.yspp  Dinky Lead.yspp  Fuzzy Triangle.yspp  Staircase.yspp
factory/release/Synth/Hexwave/Morphing/: Basic Sawtooth & Basic Square.yspp  Basic Triangle & Basic Sawtooth.yspp  Basic Triangle & Basic Square.yspp
factory/release/_ysbinary/: binplayer.json
factory/retro/: MEMO  yoursound.toml
installer/win/: AssociateFileType.nsh  Components.nsddef  Components.nsdinc  Conflicting.nsddef  Conflicting.nsdinc  Finish.nsddef  Finish.nsdinc  Paths.nsddef  Paths.nsdinc  UnFinish.nsddef  UnFinish.nsdinc  UnWelcome.nsddef  UnWelcome.nsdinc  UninsWelcome.nsddef  UninsWelcome.nsdinc  Welcome.nsddef  Welcome.nsdinc  installer.nsi
lib/: CMakeLists.txt
lib/ImGuiConfig/: CustomImConfig.h  ImGuiPianoKeyboard.hpp
libmgr/: CMakeLists.txt  icon.af  icon.af~lock~  icon.icns
libmgr/include/: Globals.hpp  LibraryInstall.hpp  MessageBox.hpp  SmallPopups.hpp
libmgr/src/: CMakeLists.txt  Globals.cpp  LibraryInstall.cpp  MessageBox.cpp  SmallPopups.cpp  WinMain.cpp  main.cpp
libtest/: CMakeLists.txt
libtest/include/: MessageBox.hpp
libtest/src/: MessageBox.cpp  main.cpp
plugin/: CMakeLists.txt
plugin/include/YourSoundPlugin/: Version.hpp
plugin/src/: CMakeLists.txt  PluginProcessor.cpp
quicksample/: CMakeLists.txt  icon.af  icon.icns
quicksample/include/: MessageBox.hpp
quicksample/src/: CMakeLists.txt  MessageBox.cpp  main.cpp
